public static class AnimationStrings
{
    internal static string xVelocity = "xVelocity";
    internal static string yVelocity = "yVelocity";
    internal static string isGrounded = "isGrounded";
    internal static string isMoving = "isMoving";
    internal static string canMove = "canMove";
    internal static string attack = "attack";
    internal static string rangedAttack = "rangedAttack";
    internal static string jump = "jump";
    internal static string ground_interrupt = "groundInterrupt";
    internal static string air_interrupt = "airInterrupt";
    internal static string isRunning = "isRunning";
    internal static string isFacingRight = "isFacingRight";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    //internal static string isAttacking = "isAttacking";
    //internal static string attackDamageMultiplier = "attackDamageMultiplier";

    //
}
